--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Неопознанный Енот</h1>
+        <h1 class="heading">Опознанный Енот</h1>
         <p>Витя Синячкин</p>
       </div>
     </section>
@@ -25,7 +25,7 @@
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
         <h3>Пара слов о себе</h3>
-        <p>Недотестировщик. Будующий верстальщик.</p>
+        <p>Недотестировщик. Будующий верстальщик (мб).</p>
         <h3>Чем могу быть полезен</h3>
         <p>Буду сайты пилить.</p>
       </div>
