--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-        Skype: xren_ololo
+        <a class="header-email" href="mailto:sinyakin-ilya@mail.ru">sinyakin-ilya@mail.ru</a>
+        <a class="header-phone"href="tel:+7920974####">+7920974####</a>
       </div>
     </header>
 
@@ -24,6 +25,8 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="files/user.jpg" width="928" height="536" alt="Фотография неопознанного енота">
         <h3>Пара слов о себе</h3>
         <p>Недотестировщик. Будующий верстальщик (мб).</p>
         <h3>Чем могу быть полезен</h3>
@@ -34,8 +37,11 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-
+          <figure class="project-image">
+            <img src="files/project.jpg" width="928" height="536" alt="Сайт инструктора Кекса">
+          </figure>
         <h3>Сайт инструктора Кекса</h3>
+        <a class="button" href="source/project/index.html">открыть страницу</a>
         <p>Небольшой лендинг о школе для начинающих.</p>
 
         <h3>Блог начинающего верстальщика</h3>
@@ -45,7 +51,9 @@
 
     <footer class="page-footer">
       <div class="container">
-        Улица Пушкина, дом Колотушкина
+        <a class="footer-email" href="mailto:sinyakin-ilya@mail.ru">sinyakin-ilya@mail.ru</a>
+        <a class="footer-phone"href="tel:+7920974####">+7920974####</a>
+        <p class="footer-add">Улица Пушкина, дом Колотушкина</p>
       </div>
     </footer>
   </body>
